--- a/templates/register.html
+++ b/templates/register.html
@@ -66,4 +66,14 @@
     <img src="{{ url_for('static', filename='src/TAicon.png') }}" alt="" width="120" height="100">
 </form>
 
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+<ul class=flashes>
+    {% for message in messages %}
+    <li>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+{% endwith %}
+
 {% endblock %}
