--- a/templates/test.html
+++ b/templates/test.html
@@ -2,10 +2,9 @@
 
 {% block head %}
 
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.css">
-<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
-    crossorigin="anonymous"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.2/css/jquery.dataTables.css">
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.2/js/jquery.dataTables.js"></script>
+
 
 {% endblock %}
 
@@ -16,9 +15,11 @@
 <table id="myTable" class="display">
     <thead>
         <tr>
+            <th>ID</th>
             <th>Name</th>
             <th>Age</th>
-            <th>Email</th>
+            <th>Student</th>
+            <th>Date Created</th>
         </tr>
     </thead>
     <tbody>
@@ -35,7 +36,7 @@
 
 <script>
     $(document).ready(function () {
-        $('#my_table').DataTable()
+        $('#myTable').DataTable()
     });
 </script>
 {% endblock %}
